force-app/main/default/objects/Lead/fields/Achievement_Points__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Points__c</fullName>
    <label>Achievement Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>