force-app/main/default/objects/Lead/fields/Character_Render__c.field-meta.xml
<CustomField>
    <fullName>Character_Render__c</fullName>
    <label>Character Render</label>
    <type>Url</type>
</CustomField>