force-app/main/default/objects/Lead/fields/Chest__c.field-meta.xml
<CustomField>
    <fullName>Chest__c</fullName>
    <label>Chest</label>
    <type>Url</type>
</CustomField>