force-app/main/default/objects/Lead/fields/Faction__c.field-meta.xml
<CustomField>
    <fullName>Faction__c</fullName>
    <label>Faction</label>
    <length>100</length>
    <type>Text</type>
</CustomField>