force-app/main/default/objects/Lead/fields/Hands__c.field-meta.xml
<CustomField>
    <fullName>Hands__c</fullName>
    <label>Hands</label>
    <type>Url</type>
</CustomField>