force-app/main/default/objects/Lead/fields/Head__c.field-meta.xml
<CustomField>
    <fullName>Head__c</fullName>
    <label>Head</label>
    <type>Url</type>
</CustomField>