force-app/main/default/objects/Lead/fields/Main_Spec__c.field-meta.xml
<CustomField>
    <fullName>Main_Spec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the main spec of the lead</description>
    <inlineHelpText>Select the main spec of the lead</inlineHelpText>
    <label>Main Spec</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Specialization__c.Class__c</field>
            <operation>equals</operation>
            <valueField>$Source.Class__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Specialization__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>