force-app/main/default/objects/Lead/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Race</label>
    <referenceTo>Race__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>