force-app/main/default/objects/Lead/fields/Server__c.field-meta.xml
<CustomField>
    <fullName>Server__c</fullName>
    <label>Server</label>
    <length>100</length>
    <type>Text</type>
</CustomField>