force-app/main/default/objects/Lead/fields/Shoulders__c.field-meta.xml
<CustomField>
    <fullName>Shoulders__c</fullName>
    <label>Shoulders</label>
    <type>Url</type>
</CustomField>