force-app/main/default/objects/Lead/fields/Tabbard__c.field-meta.xml
<CustomField>
    <fullName>Tabbard__c</fullName>
    <label>Tabbard</label>
    <type>Url</type>
</CustomField>