force-app/main/default/objects/Lead/fields/Waist__c.field-meta.xml
<CustomField>
    <fullName>Waist__c</fullName>
    <label>Waist</label>
    <type>Url</type>
</CustomField>