force-app/main/default/objects/Lead/fields/Wrist__c.field-meta.xml
<CustomField>
    <fullName>Wrist__c</fullName>
    <label>Wrist</label>
    <type>Url</type>
</CustomField>